--- a/EFGen/EFGen.csproj
+++ b/EFGen/EFGen.csproj
@@ -11,12 +11,13 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-        <PackageReference Include="Panosen.DBSchema.Mysql" Version="0.1.1" />
+        <PackageReference Include="Panosen.CodeDom.Mysql.Engine" Version="0.1.0" />
+        <PackageReference Include="Panosen.DBSchema.Mysql" Version="0.1.3" />
         <PackageReference Include="Panosen.Language.CSharp" Version="1.1.0" />
         <PackageReference Include="Panosen.Language.Mysql" Version="1.1.0" />
-        <PackageReference Include="Panosen.Text.Extension" Version="1.0.0" />
+        <PackageReference Include="Panosen.Text.Extension" Version="1.2.0" />
         <PackageReference Include="Panosen.CodeDom.CSharpProject.Engine" Version="1.0.7" />
-        <PackageReference Include="Panosen.CodeDom.EFCore.Engine" Version="0.2.3" />
+        <PackageReference Include="Panosen.CodeDom.EFCore.Engine" Version="0.2.4" />
         <PackageReference Include="Panosen.Generation" Version="1.0.4" />
         <PackageReference Include="Panosen.Resource.CSharp" Version="1.0.0" />
     </ItemGroup>
